--- a/styles.css
+++ b/styles.css
@@ -87,3 +87,19 @@ main {
     text-align: center;
     text-shadow: 0px 1px 2px rgb(5, 5, 5, 0.5);
 }
+#SkillList {
+    list-style-type: none;
+}
+#SkillList li p {
+    display: inline;
+    padding-left: 5px;
+}
+/*
+#SkillList :nth-child(3) img {
+    width: 35px;
+    border: solid;
+}*/
+#CodingIcons {
+    width: 25px;
+    height: 23px;
+}
