--- a/styles.css
+++ b/styles.css
@@ -50,8 +50,17 @@
     margin-left: 160px;
     box-shadow: 0px 1px 25px -3px rgb(209, 209, 209);
 }
+.aboutdiv {
+    background-color: rgba(88, 113, 140, 0.66);
+    margin-right: 160px;
+    margin-left: 160px;
+    box-shadow: 0px 1px 25px -3px rgb(209, 209, 209);
+}
 body {
     background-color: rgb(46, 46, 46);
+}
+hr {
+    margin-right: 20px;
 }
 main {
     padding-left: 20px;
@@ -67,6 +76,7 @@ main {
     font-family: 'Raleway', sans-serif;
     font-size: 1.5rem;
     font-weight: 100;
+    text-align: center;
 }
 .indexsummary {
     display: flex;
@@ -89,17 +99,60 @@ main {
 }
 #SkillList {
     list-style-type: none;
+    padding-bottom: 20px;
 }
 #SkillList li p {
     display: inline;
+    position: relative;
+    bottom: 6px;
     padding-left: 5px;
 }
-/*
-#SkillList :nth-child(3) img {
-    width: 35px;
-    border: solid;
-}*/
+#BootstrapP {
+    padding-left: 5px;
+}
+#SkillsHead {
+    margin-bottom: -10px;
+}
 #CodingIcons {
     width: 25px;
     height: 23px;
+}
+
+/*Fixes JS icon/text in 'skills' flexbox*/
+#SkillList :nth-child(3) img {
+    width: 35px;
+    margin: -5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+#SkillList :nth-child(3) p {
+    position: relative;
+    bottom: 8px;
+}
+#SkillList :first-child :nth-child(3) {
+    padding-left: 60px;
+}
+#quote {
+    font-size: 1.5rem;
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.FSAIcon {
+    background-color: white;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 15px;
+    float: left;
+}
+.HomeIntroP {
+    font-family: 'Raleway', sans-serif;
+    color: white;
+}
+.HomeIntro h1 {
+    text-align: center;
+    position: relative;
+    right: 50px;
+    color: rgb(209, 209, 209);
+    text-shadow: 0px 3px 10px black;
 }
