--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,9 @@ body {
 hr {
     margin-right: 20px;
 }
+#SectionHR {
+    margin-left: 20px;
+}
 main {
     padding-left: 20px;
     color: rgb(209, 209, 209);
@@ -143,10 +146,17 @@ main {
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 15px;
+    padding-right: 10px;
     float: left;
+    border: 1px solid;
+    border-radius: 25px;
+    box-shadow: 7px 15px 20px rgb(46, 46, 46)
+    
+    
 }
 .HomeIntroP {
     font-family: 'Raleway', sans-serif;
+    font-size: 1rem;
     color: white;
 }
 .HomeIntro h1 {
@@ -155,4 +165,22 @@ main {
     right: 50px;
     color: rgb(209, 209, 209);
     text-shadow: 0px 3px 10px black;
+}
+.HomeIntroTwo h1 {
+    text-align: center;
+    position: relative;
+    right: 50px;
+    color: rgb(209, 209, 209);
+    text-shadow: 0px 3px 10px black;
+}
+.FGImage {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 15px;
+    float: left;
+    width: 220px;
+    height: 160px;
+    border: 1px solid;
+    border-radius: 25px;
+    box-shadow: 7px 15px 20px rgb(46, 46, 46)
 }
