--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ main {
     text-shadow: 0px 3px 10px black;
     left: 0;
     font-size: 2.5rem;
+    padding-top: 50px;
 }
 .mainhead2 {
     font-family: 'Raleway', sans-serif;
