--- a/styles.css
+++ b/styles.css
@@ -185,3 +185,55 @@ main {
     border-radius: 25px;
     box-shadow: 7px 15px 20px rgb(46, 46, 46)
 }
+.footerOne {
+    color: white;
+    background-color: black;
+    width: 86.5rem;
+    margin: 0;
+    padding-bottom: 80px;
+    border: 1px solid;
+    box-shadow: 0px 0px 15px rgb(209, 209, 209);
+}
+.footerOne .footerDivOne a:hover {
+    color: navy;
+    background-color: rgb(209, 209, 209);
+    border: solid;
+    border-color: black;
+    font-size: 20px;
+}
+.footerOne .footerDivOne a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-size: 30px;
+}
+.footerDivOne {
+    margin-left: 50px;
+    margin-top: 30px;
+    position: relative;
+}
+.squares {
+    margin-left: 220px;
+    margin-top: -100px;
+}
+.squareComplete{
+    padding: 10px 17px 10px 17px;
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: greenyellow;
+    border: solid;
+    border-color: rgb(84, 84, 84);
+}
+.squareIncomplete {
+    padding: 10px 17px 10px 17px;
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: red;
+    border: solid;
+    border-color: rgb(84, 84, 84);
+}
+.squares span {
+    margin-left: 10px;
+}
