--- a/styles.css
+++ b/styles.css
@@ -248,3 +248,26 @@ main {
     position: relative;
     bottom: 200px;
 }
+.navSocialSquare {
+    display: flex;
+    position: fixed;
+    left: 1270px;
+    bottom: 592px;
+    background-color: white;
+}
+.navSocialSquare :first-child {
+    display: block;
+    height: 35px;
+    border: 1px solid;
+    border-color: white;
+}
+.navSocialSquare :nth-child(2) {
+    display: block;
+    height: 35px;
+    margin-left: 70px;
+    border: 1px solid;
+    border-color: black;
+}
+.navSocialSquare img:hover {
+    box-shadow: 0px 0px 5px 3px rgb(209, 209, 209);
+}
