Added skeleton of contact page

--- a/styles.css
+++ b/styles.css
@@ -442,3 +442,11 @@ main {
     margin-right: 10px;
     font-size: large;
 }
+
+/* CONTACT PAGE STYLING ********************************************** */
+
+.formSubDiv {
+    text-align: center;
+}
+
+/* FORM SUBMIT PAGE STYLING ********************************************** */
