--- a/styles.css
+++ b/styles.css
@@ -505,4 +505,11 @@ textarea {
 
 .formSubDiv {
     text-align: center;
+    color: rgb(209, 209, 209);
+    left: 0;
+    font-size: 2.5rem;
+    padding-top: 50px;
+}
+.formSubDiv h1 {
+    font-size: 60px;;
 }
